# ChangeLog for sys-apps/portage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.00.13346 (15 Apr 2009)

  15 Apr 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13200.ebuild, -portage-2.2.00.13280.ebuild,
  +portage-2.2.00.13346.ebuild:
  Version bump to 2.2_rc30+, this version no longer accepts
  EAPI="prefix", note: you cannot downgrade from this version

*portage-2.2.00.13286-r1 (14 Apr 2009)

  14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/portage-2.2.00.13286-dest-fix.patch, -portage-2.2.00.13286.ebuild,
  +portage-2.2.00.13286-r1.ebuild:
  Add a patch from svn to fix issues with _many_ packages - will be in next
  portage release

*portage-2.2.00.13286 (10 Apr 2009)

  10 Apr 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13133.ebuild, +portage-2.2.00.13286.ebuild:
  New snapshot. This version uses BASH and MV from the locations configure
  found, which should help to reduce the prefix-chaining patch a bit.

*portage-2.2.00.13280 (02 Apr 2009)

  02 Apr 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.13243.ebuild, +portage-2.2.00.13280.ebuild:
  Bump for bug #264245, ecompress was broken

*portage-2.2.00.13243 (29 Mar 2009)

  29 Mar 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.12807.ebuild, +portage-2.2.00.13243.ebuild:
  Version bump, this is a hybrid Portage that accepts both EAPI with and
  without 'prefix' meant to be used only during the transition period of our
  tree while EAPI=prefix is being removed.

*portage-2.2.00.13200 (26 Mar 2009)

  26 Mar 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.12790.ebuild, +portage-2.2.00.13200.ebuild:
  New snapshot, some glep55 preparations included

  26 Mar 2009; Markus Duft <mduft@gentoo.org>
  -files/portage-2.2.00.12425-cross-prefix.patch,
  -files/portage-2.2.00.12540-cross-prefix.patch,
  -files/portage-2.2.00.12574-cross-prefix.patch,
  +files/portage-2.2.00.13133-prefix-chaining.patch,